Albums, perfil: fotos.php -> album.php, Chat: z-index anclaje (fix para fotos.php), fotos: cursor pointer en img

--- a/css/style.css
+++ b/css/style.css
@@ -1213,6 +1213,7 @@ div.etiqueta_seleccionada {
 	bottom: 0;
 	position: fixed;
 	height: 55px;
+	z-index: 1;
 }
 
 #chat_boton {
